welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: reassignment to val
	if (isSummer=true) {
                    ^